--- a/index.html
+++ b/index.html
@@ -31,24 +31,25 @@ button { font-size:20px; padding:10px 20px; margin:10px; }
 // ======================
 
 let DB = [
-    {name:"루시안", rarity:3, weight:1},
-    {name:"발렌티아", rarity:3, weight:1},
-    {name:"카시아", rarity:3, weight:1},
-    {name:"요르문간드", rarity:3, weight:1},
+    {name:"발렌티나", rarity:3, weight:1},
+    {name:"백연", rarity:3, weight:1},
+    {name:"도로시", rarity:3, weight:1},
+    {name:"마리", rarity:3, weight:1},
+    {name:"로렌츠", rarity:3, weight:1},
 
-    {name:"란", rarity:2, weight:1},
+    {name:"올가", rarity:2, weight:1},
     {name:"나모", rarity:2, weight:1},
     {name:"올리버", rarity:2, weight:1},
-    {name:"백연", rarity:2, weight:1},
-    {name:"모지", rarity:2, weight:1},
-    {name:"아이리스", rarity:2, weight:1},
+    {name:"유나", rarity:2, weight:1},
+    {name:"암젤", rarity:2, weight:1},
+    {name:"니콜라", rarity:2, weight:1},
 
-    {name:"신입요원A", rarity:1, weight:1},
-    {name:"경비병", rarity:1, weight:1},
-    {name:"연구원", rarity:1, weight:1},
-    {name:"보급병", rarity:1, weight:1},
-    {name:"정찰병", rarity:1, weight:1},
-    {name:"수습장교", rarity:1, weight:1}
+    {name:"재클린", rarity:1, weight:1},
+    {name:"할", rarity:1, weight:1},
+    {name:"헤더스", rarity:1, weight:1},
+    {name:"프리츠", rarity:1, weight:1},
+    {name:"에밀리", rarity:1, weight:1},
+    {name:"베르너", rarity:1, weight:1}
 ];
 
 // ======================
