--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ let DB = [
 // 현재 픽업 지정
 // ======================
 
-let PICKUP_3 = "발렌티아";
-let PICKUP_2 = "아이리스";
+let PICKUP_3 = "발렌티나";
+let PICKUP_2 = "none";
 
 // 픽업 가중치 설정
 function applyPickupWeights(){
